# GPGPU_G26_2024

./: Makefile.mak  README.md  ej1.cu
labFinal/: data_media.csv
labFinal/Codigo/: Makefile  execute.sh
labFinal/ejemplo_cimg/: .out  Makefile  blur  blur.cu  main.cpp  (+7 more)
parctico4/: .$1b.drawio.bkp  .$matriz_histograma.drawio.dtmp  .$transponer.drawio.bkp  .$transponer.drawio.dtmp  ej1.cu  ej3.cu  ej3B.cu  launch_single.sh  matriz_histograma.drawio  salida.out  transponer.drawio
practico1/: CMakeLists.txt  Makefile  cacheUtils.h  ejercicio1.c  ejercicio2.c  main.c  utils.c  utils.h
practico1/include/: cacheUtils.h  ej1AccesoDesalineado.h  ej1PrefetchExplicito.h  ej1TiempoPromedioAccesoCache.h  ej2Blocking.h  ej2CompetenciaSetCache.h  ej2Reordenamiento.h  ejercicio2.h  utils.h
practico1/source/: cacheUtils.c  ejercicio1.c  ejercicio2.c  utils.c
practico1/src/: cacheUtils.c  ej1AccesoDesalineado.c  ej1PrefetchExplicito.c  ej1TiempoPromedioAccesoCache.c  ej2Blocking.c  ej2CompetenciaSetCache.c  ej2Reordenamiento.c  ej2ReordenamientoYBlocking.c  ejercicio1.c  ejercicio2.c  utils.c
practico2/: ej1.cu  ej1_sol  ejecucion.sh  launch_single.sh  salida.out
practico3/: ej1.cu  ej2.cu  ej3.cu  ej3B_andaMejor.cu  matrix.drawio  mult.drawio  mult_optimixado2.drawio  mult_optimizado.drawio
practico4/: .$matriz_histograma.drawio.dtmp  .$transponer.drawio.bkp  .$transponer.drawio.dtmp  ej1.cu  ej1_valen.cu  ej3.cu  ej3B.cu  launch_single.sh  matriz_histograma.drawio  transponer.drawio
practico5/: Makefile  ej1.cu  ej2.cu  ejercicio_compilado  launch_single.sh  salida.out
(+110 files in other folders)
